Cambios de diseño

--- a/mauto/front/inicio.html
+++ b/mauto/front/inicio.html
@@ -8,14 +8,12 @@
 </head>
 <body>
     <header>
-        <p>Mauto</p>
-        <nav>
-            <ul>
+        <nav class="navbar">
+            <div class="navbar-brand">Mauto</div>
+            <ul class="navbar-nav">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="registro.html">Registrarse</a></li>
-                <li><a href="#">Iniciar sesion</a></li>
             </ul>
-
         </nav>
     </header>
     
