--- a/mauto/front/registro.html
+++ b/mauto/front/registro.html
@@ -8,14 +8,12 @@
 </head>
 <body>
     <header>
-        <p>Mauto</p>
-        <nav>
-            <ul>
+        <nav class="navbar">
+            <div class="navbar-brand">Mauto</div>
+            <ul class="navbar-nav">
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="#">Registrarse</a></li>
-                <li><a href="inicio.html">Iniciar sesion</a></li>
+                <li><a href="inicio.html">Iniciar sesión</a></li>
             </ul>
-
         </nav>
     </header>
     
