--- a/mauto/front/index.html
+++ b/mauto/front/index.html
@@ -8,25 +8,23 @@
 </head>
 <body>
     <header>
-        <p>Mauto</p>
-        <nav>
-            <ul>
-                <li><a href="#">Inicio</a></li>
+        <nav class="navbar">
+            <div class="navbar-brand">Mauto</div>
+            <ul class="navbar-nav">
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="inicio.html">Iniciar sesión</a></li>
                 <li><a href="registro.html">Registrarse</a></li>
-                <li><a href="inicio.html">Iniciar sesion</a></li>
             </ul>
-
         </nav>
     </header>
     
     <main>
-        <h1>La nueva aplicacion para que puedas estar al dia con el estado de tu vehiculo</h1>
-        <p>Presentamos esta herramienta para que puedas mantener en un solo lugar todo lo que necesitas para mantenerte informado sobre la condicion de tu auto y lo que necesita para que este de 10</p>
+        <h1>La nueva aplicación para que puedas estar al día con el estado de tu vehículo</h1>
+        <p>Presentamos esta herramienta para que puedas mantener en un solo lugar todo lo que necesitas para mantenerte informado sobre la condición de tu auto y lo que necesita para que esté de 10.</p>
     </main>
 
     <footer>
         <p>Desarrollado por el grupo 7</p>
     </footer>
-
 </body>
 </html>
