Cambios de estructura

--- a/mauto/front/html/index.html
+++ b/mauto/front/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
     <title>Mauto</title>
 </head>
 <body>
@@ -12,27 +12,19 @@
             <div class="navbar-brand">Mauto</div>
             <ul class="navbar-nav">
                 <li><a href="index.html">Inicio</a></li>
+                <li><a href="inicio.html">Iniciar sesión</a></li>
                 <li><a href="registro.html">Registrarse</a></li>
             </ul>
         </nav>
     </header>
     
     <main>
-        <p>Inicie sesion</p>
-
-        <form>
-            <!---<label for="mail">Email</label>--->
-            <input type="text" id="email" name="email" placeholder="Email" required><br>
-
-            <input type="text" id="contraseña" name="contraseña" placeholder="Contraseña" required><br>
-
-            <button type="submit">Iniciar sesion</button>
-        </form>
+        <h1>La nueva aplicación para que puedas estar al día con el estado de tu vehículo</h1>
+        <p>Presentamos esta herramienta para que puedas mantener en un solo lugar todo lo que necesitas para mantenerte informado sobre la condición de tu auto y lo que necesita para que esté de 10.</p>
     </main>
 
     <footer>
         <p>Desarrollado por el grupo 7</p>
     </footer>
-
 </body>
 </html>
