Un poco mas de front

--- a/mauto/front/html/index.html
+++ b/mauto/front/html/index.html
@@ -9,9 +9,8 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="navbar-brand">Mauto</div>
+            <a href="index.html" class="navbar-brand">Mauto</a>
             <ul class="navbar-nav">
-                <li><a href="index.html">Inicio</a></li>
                 <li><a href="inicio.html">Iniciar sesión</a></li>
                 <li><a href="registro.html">Registrarse</a></li>
             </ul>
@@ -19,7 +18,7 @@
     </header>
     
     <main>
-        <h1>La nueva aplicación para que puedas estar al día con el estado de tu vehículo</h1>
+        <h1>¡BIENVENIDO A MAUTO!</h1>
         <p>Presentamos esta herramienta para que puedas mantener en un solo lugar todo lo que necesitas para mantenerte informado sobre la condición de tu auto y lo que necesita para que esté de 10.</p>
     </main>
 
