--- a/mauto/front/html/inicio.html
+++ b/mauto/front/html/inicio.html
@@ -9,24 +9,25 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="navbar-brand">Mauto</div>
+            <a href="index.html" class="navbar-brand">Mauto</a>
             <ul class="navbar-nav">
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="inicio.html">Iniciar sesión</a></li>
                 <li><a href="registro.html">Registrarse</a></li>
             </ul>
         </nav>
     </header>
     
     <main>
-        <p>Inicie sesion</p>
+        <h1>Inicie sesion</h1>
 
         <form>
-            <!---<label for="mail">Email</label>--->
-            <input type="text" id="email" name="email" placeholder="Email" required><br>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Email" required><br>
 
-            <input type="text" id="contraseña" name="contraseña" placeholder="Contraseña" required><br>
+            <label for="contraseña">Contraseña</label>
+            <input type="password" id="contraseña" name="contraseña" placeholder="Contraseña" required><br>
 
-            <button type="submit">Iniciar sesion</button>
+            <button type="submit">Iniciar sesión</button>
         </form>
     </main>
 
