--- a/mauto/front/html/registro.html
+++ b/mauto/front/html/registro.html
@@ -9,25 +9,29 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="navbar-brand">Mauto</div>
+            <a href="index.html" class="navbar-brand">Mauto</a>
             <ul class="navbar-nav">
-                <li><a href="index.html">Inicio</a></li>
                 <li><a href="inicio.html">Iniciar sesión</a></li>
+                <li><a href="registro.html">Registrarse</a></li>
             </ul>
         </nav>
     </header>
     
     <main>
-        <p>Registre una cuenta</p>
+        <h1>Registre una cuenta</h1>
 
         <form>
+            <label for="nombre">Nombre</label>
             <input type="text" id="nombre" name="nombre" placeholder="Nombre" required><br>
 
+            <label for="apellido">Apellido</label>
             <input type="text" id="apellido" name="apellido" placeholder="Apellido" required><br>
 
-            <input type="text" id="email" name="email" placeholder="Email" required><br>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Email" required><br>
 
-            <input type="text" id="contraseña" name="contraseña" placeholder="Contraseña" required><br>
+            <label for="contraseña">Contraseña</label>
+            <input type="password" id="contraseña" name="contraseña" placeholder="Contraseña" required><br>
 
             <button type="submit">Registrar</button>
         </form>
