--- a/mauto/front/html/inicio.html
+++ b/mauto/front/html/inicio.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <title>Mauto</title>
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <a href="index.html" class="navbar-brand">Mauto</a>
+            <a href="{{ url_for('index') }}" class="navbar-brand">Mauto</a>
             <ul class="navbar-nav">
-                <li><a href="inicio.html">Iniciar sesión</a></li>
-                <li><a href="registro.html">Registrarse</a></li>
+                <li><a href="inicio">Iniciar sesión</a></li>
+                <li><a href="registro">Registrarse</a></li>
             </ul>
         </nav>
     </header>
@@ -20,7 +20,7 @@
     <main>
         <h1>Inicie sesion</h1>
 
-        <form>
+        <form action="{{ url_for('inicio') }}" method="POST">
             <label for="email">Email</label>
             <input type="email" id="email" name="email" placeholder="Email" required><br>
 
