--- a/front/html/registro.html
+++ b/front/html/registro.html
@@ -3,43 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styleRegistro.css') }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap" rel="stylesheet"> 
     <title>Mauto</title>
 </head>
 <body>
     <header>
-        <nav class="navbar">
-            <a href="{{ url_for('index') }}" class="navbar-brand">Mauto</a>
-            <ul class="navbar-nav">
-                <li><a href="inicio">Iniciar sesión</a></li>
-                <li><a href="registro">Registrarse</a></li>
-            </ul>
-        </nav>
-    </header>
+        <a href="{{ url_for('index') }}">
+            <img class="logo" src="../static/images/logo-home.png">
+        </a>
     
     <main>
-        <h1>Registre una cuenta</h1>
+        <form action="{{ url_for('registro') }}" method="POST">
+            <h2>Registre una cuenta</h2>
 
-         <form action="{{ url_for('registro') }}" method="POST">
-            <label for="nombre">Nombre</label>
-            <input type="text" id="nombre" name="nombre" placeholder="Nombre" required><br>
+            <fieldset>
+                <legend>Datos personales</legend>
+                <div class="form_input"> 
+                    <label for="nombre">Nombre</label>
+                    <input type="text" id="nombre" name="nombre" placeholder="Nombre" required><br>
 
-            <label for="apellido">Apellido</label>
-            <input type="text" id="apellido" name="apellido" placeholder="Apellido" required><br>
+                    <label for="apellido">Apellido</label>
+                    <input type="text" id="apellido" name="apellido" placeholder="Apellido" required><br>
 
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="Email" required><br>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Email" required><br>
 
-            <label for="contraseña">Contraseña</label>
-            <input type="password" id="contraseña" name="contraseña" placeholder="Contraseña" required><br>
+                    <label for="contraseña">Contraseña</label>
+                    <input type="password" id="contraseña" name="contraseña" placeholder="Contraseña" required><br>
+                </div>
+            </fieldset>  
 
-            <button type="submit">Registrar</button>
-        </form>
+            <div class="form_submit">
+                    <button class="submit_button" type="submit">Registrarse</button>
+                </div>
+            </form>
     </main>
-
-    <footer>
-        <p>Desarrollado por el grupo 7</p>
-    </footer>
-
 </body>
 </html>
