UPDATE Inicio de Sesión

--- a/front/html/registro.html
+++ b/front/html/registro.html
@@ -32,7 +32,7 @@
                     <input type="email" id="email" name="email" placeholder="Email" required><br>
 
                     <label for="contraseña">Contraseña</label>
-                    <input type="password" id="contraseña" name="contraseña" placeholder="Contraseña" required><br>
+                    <input type="password" id="contrasena" name="contrasena" placeholder="Contraseña" required><br>
                 </div>
             </fieldset>  
 
