FIX ERRORES agregarAutomovil.html inicio.html main.py

--- a/front/html/agregarAutomovil.html
+++ b/front/html/agregarAutomovil.html
@@ -17,7 +17,7 @@
     </header>
 
     <main>
-        <form action="{{ url_for('cargar_automovil') }}" method="POST">
+        <form action="{{ url_for('agregarAutomovil') }}" method="POST">
             <h2>Registrar Automóvil</h2>
 
             <fieldset>
