Faltaba la ruta

--- a/front/html/principal.html
+++ b/front/html/principal.html
@@ -31,7 +31,7 @@
             <aside class="side-menu">
                 <ul>
                     <li><a href="{{ url_for('agregarAutomovil')}}">Agregar Auto</a></li>
-                    <li><a >Notificaciones</a></li>
+                    <li><a href="{{ url_for('misAutos')}}">Mis autos</a></li>
                     <li><a href="{{ url_for('index')}}">Cerrar Sesión</a></li>
                 </ul>
             </aside>
