UPDATE ya se puede cerrar sesión

--- a/front/html/principal.html
+++ b/front/html/principal.html
@@ -32,7 +32,7 @@
                 <ul>
                     <li><a href="{{ url_for('agregarAutomovil')}}">Agregar Auto</a></li>
                     <li><a href="{{ url_for('misAutos')}}">Mis autos</a></li>
-                    <li><a href="{{ url_for('index')}}">Cerrar Sesión</a></li>
+                    <li><a href="{{ url_for('logout')}}">Cerrar Sesión</a></li>
                 </ul>
             </aside>
         </div>
