UPDATE agregado de mantenimientos

--- a/front/html/mantenimientos.html
+++ b/front/html/mantenimientos.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="agregar-mantenimiento">
-            <a href="{{ url_for('agregar_mantenimiento') }}" class="btn-agregar">Agregar Mantenimiento</a>
+            <a href="{{ url_for('agregar_mantenimiento', auto_id=auto_id) }}" class="btn-agregar">Agregar Mantenimiento</a>
         </div>
 
         <table>
