renombramiento de agregarMantenimiento

--- a/front/html/agregarMantenimiento.html
+++ b/front/html/agregarMantenimiento.html
@@ -18,7 +18,7 @@
 
     <main>
         <h1>Agregar Mantenimiento</h1>
-        <form method="POST" action="{{ url_for('agregar_mantenimiento', auto_id=auto_id) }}">
+        <form method="POST" action="{{ url_for('agregarMantenimiento', auto_id=auto_id) }}">
             <label for="control">Tipo de Mantenimiento:</label>
             <select id="control" name="control">
                 <option value="aceite">Cambio de Aceite</option>
