--- a/front/html/mantenimientos.html
+++ b/front/html/mantenimientos.html
@@ -27,7 +27,7 @@
             </select>
         </div>
 
-        <div class="agregar-mantenimiento">
+        <div class="agregarMantenimiento">
             <a href="{{ url_for('agregarMantenimiento', auto_id=auto_id) }}" class="btn-agregar">Agregar Mantenimiento</a>
         </div>
 
