--- a/front/html/mantenimientos.html
+++ b/front/html/mantenimientos.html
@@ -27,8 +27,8 @@
             </select>
         </div>
 
-        <div class="agregarMantenimiento">
-            <a href="{{ url_for('agregarMantenimiento', auto_id=auto_id) }}" class="btn-agregar">Agregar Mantenimiento</a>
+        <div class="agregar-mantenimiento">
+            <a href="{{ url_for('agregar_mantenimiento', auto_id=auto_id) }}" class="btn-agregar">Agregar Mantenimiento</a>
         </div>
 
         <table>
