--- a/front/html/mantenimientos.html
+++ b/front/html/mantenimientos.html
@@ -25,6 +25,7 @@
                 <option value="frenos">Revisión de Frenos</option>
                 <option value="neumaticos">Cambio de Neumáticos</option>
             </select>
+            <a href="agregarMantenimiento.html" class="btn-agregar">Agregar Mantenimiento</a>
         </div>
 
         <div class="agregar-mantenimiento">
