--- a/front/html/registro.html
+++ b/front/html/registro.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap" rel="stylesheet"> 
-    <script src="{{ url_for('static', filename='js/validations.js') }}" defer></script>
+    <script src="{{ url_for('js', filename='validations.js') }}" defer></script>
     <title>Mauto</title>
 </head>
 <body>
@@ -17,6 +17,7 @@
         </a>
     
     <main>
+        
         <form action="{{ url_for('registro') }}" method="POST">
             <h2>Registre una cuenta</h2>
 
