--- a/front/html/registro.html
+++ b/front/html/registro.html
@@ -17,7 +17,16 @@
         </a>
     
     <main>
-        
+         <!-- Mostrar mensajes de error o éxito -->
+         {% with messages = get_flashed_messages(with_categories=true) %}
+         {% if messages %}
+             <ul class="flashes">
+                 {% for category, message in messages %}
+                     <li class="{{ category }}">{{ message }}</li>
+                 {% endfor %}
+             </ul>
+         {% endif %}
+     {% endwith %}
         <form action="{{ url_for('registro') }}" method="POST">
             <h2>Registre una cuenta</h2>
 
