--- a/front/html/agregarAutomovil.html
+++ b/front/html/agregarAutomovil.html
@@ -53,5 +53,6 @@
             </div>
         </form>
     </main>
+    <script src="{{ url_for('static', filename='js/validacionesAuto.js') }}" defer></script>
 </body>
 </html>
