--- a/front/html/registro.html
+++ b/front/html/registro.html
@@ -35,12 +35,12 @@
 
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" placeholder="Email" required><br>
-                    <span class="error" id="error-email">
+                    <span class="error" id="error-email"></span> 
 
                     <label for="contraseña">Contraseña</label>
                     <input type="password" id="contrasena" name="contrasena" placeholder="Contraseña" required><br>
                     <span class="error" id="error-contrasena"></span>
-                    
+
                 </div>
             </fieldset>  
 
