--- a/front/html/agregarAutomovil.html
+++ b/front/html/agregarAutomovil.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap" rel="stylesheet">
     <title>Mauto</title>
+
 </head>
 <body>
     <header>
@@ -53,6 +54,6 @@
             </div>
         </form>
     </main>
-    <script src="{{ url_for('static', filename='js/validacionesAuto.js') }}" defer></script>
+    <script src="{{ url_for('static', filename='js/validacioness.js') }}" defer></script>
 </body>
 </html>
