cambio tarjetas autos

--- a/front/html/agregarAutomovil.html
+++ b/front/html/agregarAutomovil.html
@@ -33,8 +33,8 @@
                     <label for="anio">Año</label>
                     <input type="number" id="anio" name="anio" placeholder="Año de fabricación" required><br>
 
-                    <label for="vin">Número de Identificación del Vehículo (VIN)</label>
-                    <input type="text" id="vin" name="vin" placeholder="VIN" required><br>
+                    <label for="vin">Número de Patente</label>
+                    <input type="text" id="vin" name="vin" placeholder="Patente" required><br>
 
                     <label for="kilometraje">Kilometraje</label>
                     <input type="number" id="kilometraje" name="kilometraje" placeholder="Kilometraje actual" required><br>
