--- a/front/html/inicio.html
+++ b/front/html/inicio.html
@@ -47,5 +47,13 @@
                 </div>
             </form>
         </main>
+        <script>
+            setTimeout(function() {
+                var flashes = document.querySelector('.flashes');
+                if (flashes) {
+                    flashes.style.display = 'none';
+                }
+            }, 5000); // 5 segundos
+        </script>
     </body>
     </html>
