--- a/front/html/registro.html
+++ b/front/html/registro.html
@@ -17,7 +17,15 @@
         </a>
     
     <main>
-         
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <ul class="flashes">
+            {% for category, message in messages %}
+                <li class="{{ category }}">{{ message }}</li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
 
         <form action="{{ url_for('registro') }}" method="POST">
             <h2>Registre una cuenta</h2>
@@ -50,5 +58,13 @@
             </form>
     </main>
     <script src="{{ url_for('static', filename='js/validaciones.js') }}" defer></script>
+    <script>
+        setTimeout(function() {
+            var flashes = document.querySelector('.flashes');
+            if (flashes) {
+                flashes.style.display = 'none';
+            }
+        }, 5000); // 5 segundos
+    </script>
 </body>
 </html>
