mensaje de sucess

--- a/front/html/index.html
+++ b/front/html/index.html
@@ -23,6 +23,15 @@
     </header>
     
     <main>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <ul class="flashes">
+            {% for category, message in messages %}
+                <li class="{{ category }}">{{ message }}</li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
         <div class="card">
             <h1 class="card_title">Bienvenido a<span> MAUTO</span></h1>
             <p class="card_content">Un software diseñado para simplificar la gestión de los controles de tu automóvil en un solo lugar y accesible desde cualquier dispositivo.</p>
@@ -42,6 +51,13 @@
             <p>Desarrollado por el grupo 7</p>
         </div>
     </footer>
-
+    <script>
+        setTimeout(function() {
+            var flashes = document.querySelector('.flashes');
+            if (flashes) {
+                flashes.style.display = 'none';
+            }
+        }, 5000); // 5 segundos
+    </script>
 </body>
 </html>
