--- a/front/html/principal.html
+++ b/front/html/principal.html
@@ -19,6 +19,16 @@
     </header>
     
     <main>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <ul class="flashes">
+            {% for category, message in messages %}
+                <li class="{{ category }}">{{ message }}</li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
+        
         <div class="content-wrapper">
             <div class="main-content">
                 <div class="card">
@@ -44,5 +54,13 @@
             <p>Desarrollado por el grupo 7</p>
         </div>
     </footer>
+    <script>
+        setTimeout(function() {
+            var flashes = document.querySelector('.flashes');
+            if (flashes) {
+                flashes.style.display = 'none';
+            }
+        }, 5000); // 5 segundos
+    </script>
 </body>
 </html>
